Components have been updated with additional components for better functionality. Their Sass file counterparts and testing files have been added as well

--- a/src/Sass/Variables.scss
+++ b/src/Sass/Variables.scss
@@ -1,7 +1,11 @@
 // main color scheme
 $darkpink: hsla(315, 75%, 15%, 1);
+$board: hsla(170, 75%, 15%, .8);
+$playername: hsla(205, 95%, 85%, 1);
+$btnpink: #FC6D95;
+$scoreboard: #046380;
 
 
 // fonts
-$hfont: 'Lato', sans-serif;
-$bodyfont: 'Rock Salt', cursive;
+$bodyfont: 'Lato', sans-serif;
+$hfont: 'Rock Salt', cursive;
