--- a/src/Sass/_Board.scss
+++ b/src/Sass/_Board.scss
@@ -1,6 +1,6 @@
 .card-board {
-  color: hsla(315, 75%, 15%, 1);
+  color: $darkpink;
   display: flex;
-  font-family: 'Lato', sans-serif;
+  font-family: $bodyfont;
   padding: 10px;
 }
