--- a/src/Sass/index.scss
+++ b/src/Sass/index.scss
@@ -2,7 +2,8 @@
 @import 'Mixins';
 
 @import 'App';
-@import 'Board';
 @import 'Card';
 @import 'PlayerScore';
 @import 'Header';
+@import 'M';
+@import 'Q';
