--- a/src/Sass/_App.scss
+++ b/src/Sass/_App.scss
@@ -1,4 +1,11 @@
+* {
+  &:focus {
+  outline: none;
+  }
+}
+
 body {
   background-image: url('https://images.unsplash.com/photo-1518110516893-31ce851decb0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80');
   background-size: cover;
+  text-align: center;
 }
