--- a/src/Sass/_Card.scss
+++ b/src/Sass/_Card.scss
@@ -1,14 +1,34 @@
 .card {
-  background-color: #002F2F;
-  opacity: .6;
+  background-color: $board;
+  opacity: .85;
   display: inline-block;
   height: 500px;
   margin: 0px 40px;
-  width: 63%;
+  width: 70%;
 }
 
 .card h4 {
   color: white;
   margin: 0;
   text-align: center;
+}
+
+.card-btns {
+  text-align: center;
+}
+
+.card-btn {
+  background-color: $btnpink;
+  border: none;
+  border-radius: 5px;
+  font-family: $bodyfont;
+  font-weight: 900;
+  height: 25px;
+  letter-spacing: .5px;
+  margin: 25px;
+  text-transform: uppercase;
+  &:hover {
+    box-shadow: .1em .2em .2em $playername;
+    cursor: pointer;
+  }
 }
