Array of incorrect ideas is now saving to local storage

--- a/src/Sass/Variables.scss
+++ b/src/Sass/Variables.scss
@@ -4,6 +4,9 @@ $board: hsla(170, 75%, 15%, .8);
 $playername: hsla(205, 95%, 85%, 1);
 $btnpink: #FC6D95;
 $scoreboard: #046380;
+$boardshadow: hsla(170, 5%, 15%, 1);
+$playershadow: #034f66;
+$btnshadow: #c03;
 
 
 // fonts
