Basic state testing finished on all components

--- a/src/Sass/Variables.scss
+++ b/src/Sass/Variables.scss
@@ -7,6 +7,7 @@ $scoreboard: #046380;
 $boardshadow: hsla(170, 5%, 15%, 1);
 $playershadow: #034f66;
 $btnshadow: #c03;
+$mbtn: #F5E1DF;
 
 
 // fonts
