--- a/src/Sass/_Card.scss
+++ b/src/Sass/_Card.scss
@@ -2,7 +2,12 @@
   background-color: $board;
   border-radius: 25px;
   box-shadow: 5px 5px 5px $boardshadow;
-  display: block;
+  display: grid;
+  grid-template-areas: 
+  "pic"
+  "btn"
+  "start";
+  grid-template-rows: 2fr 1fr 1fr;
   height: 450px;
   margin: auto;
   padding: 5px;
@@ -25,8 +30,10 @@
   border-radius: 5px;
   box-shadow: 3px 3px 3px $btnshadow;
   font-family: $bodyfont;
+  font-size: 14px;
   font-weight: 900;
-  height: 25px;
+  grid-area: start;
+  height: 35px;
   letter-spacing: .5px;
   margin: 25px;
   text-transform: uppercase;
